# spade_deep_research

./: .gitignore  README.md  chat_deep_research.py  pyproject.toml
report_examples/: additive_manufacturing.md
src/: agent.py  main.py
src/agents/: __init__.py  specialized.py
src/config/: mcp.py  prompts.py  settings.py  tools.py
src/states/: __init__.py  planning.py  research.py  writing.py
src/utils/: summarizer.py
