[project]
name = "spade-deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spade-llm[chroma]",
    "tavily>=1.1.0",
]

[tool.uv.sources]
spade-llm = { git = "https://github.com/javipalanca/spade_llm", rev = "dev" }